# APT

./: CMakeLists.txt  build.sh  exp_multinodes.sh  setup_env.sh  train_configs.sh
examples/: copy_sampler.py  dgl_runner.py  distributed_training_dgl.py  dryrun_costmodel.py  mp_runner.py  mp_runner_copy.py  mp_runner_costmodel.py  mp_runner_multi_nodes.py  test.py  test_nccl_multi_machines.py  test_single_machine.py  train.py  train_copy.py
python/: setup.py
python/apt/: __init__.py  ops.py  planner.py  sageconv.py
python/npc/: ops.py  sampler.py
scripts/: partition.py  prepare_data.py
src/: cache_feats.cc  cache_feats.h  cache_graphs.cc  cache_graphs.h  core.cc  core.h  feat_shuffle.cc  feat_shuffle.h  load_subtensor.cc  load_subtensor.h  pybind.cc  relabel.cc  relabel.h  sampling.cc  sampling.h  sddmm.cc  sddmm.h  spmm.cc  spmm.h  state.h  utils.h
src/cuda/: apt_kernel.cu  apt_kernel.h  atomic.h  cuda_common.h  relabel.cu  sddmm.cu  spmm.cu  utils.h
src/ops/: collective.cc  collective.h
